Proyecto basado en el de Gustavo

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,7 +14,7 @@
     phpSettings.max_execution_time                                        = 0
     phpSettings.max_input_time                                            = 0
     phpSettings.memory_limit                                              = -1
-
+    
 ; Webservice Socket Timeout in seconds
     phpSettings.default_socket_timeout                                    = 300
 
@@ -34,8 +34,8 @@
     ;resources.multidb.oracle.profiler.enabled                             = false
     ;resources.multidb.oracle.options.autoQuoteIdentifiers                 = false
     ;resources.multidb.oracle.options.caseFolding                          = 2
-    ;resources.multidb.oracle.isDefaultTableAdapter                        = true
-
+    ;resources.multidb.oracle.isDefaultTableAdapter                        = true	
+	
 	;MySQL
 	resources.multidb.mysql.adapter										   = mysqli
 	resources.multidb.mysql.charset										   = utf8
@@ -44,7 +44,7 @@
 	resources.multidb.mysql.options.autoQuoteIdentifiers				   = false
 	resources.multidb.mysql.options.caseFolding							   = 2
 	resources.multidb.mysql.isDefaultTableAdapter						   = false
-
+	
 ; Resources frontController
     resources.frontController.env                                         = APPLICATION_ENV
     resources.frontController.controllerDirectory                         = APPLICATION_PATH "/controllers"
@@ -85,10 +85,10 @@
 	;MySQL
 	resources.multidb.mysql.host										  = localhost
 	resources.multidb.mysql.port										  = 3306
-	resources.multidb.mysql.dbname										  = escolar
+	resources.multidb.mysql.dbname										  = escuela
 	resources.multidb.mysql.username									  = root
-	resources.multidb.mysql.password									  = LeeesdhdA
-
+	resources.multidb.mysql.password									  = 
+	
 ; Error reporting
     phpSettings.html_errors                                               = true
     phpSettings.display_errors                                            = true
